--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.1.1
+version: 2.1.2
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -39,6 +39,8 @@ dependencies:
   http: ^1.2.1
   image_picker: ^1.1.2
   msix: ^3.16.7
+  flutter_tts: ^4.0.2
+  fluttertoast: ^8.2.5
 
 msix_config:
   display_name: "Fernandes Image Describer"
